#1: Index distribution Updated plots.